Adicionando a section artigos

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <nav class="menu">
             <a href="" class="active">HOME</a>
             <a href="">PROJETOS</a>
-            <a href="">SOBRE</a>
             <a href="">ARTIGOS</a>
+            <a href="">SOBRE</a>
             <a href="">CONTATO</a>
         </nav>
         <nav class="menu-mobile hidden" id="menu-mobile">
             <i class="fas fa-times" id="btn-close"></i>
             <a href="" class="active">HOME</a>
             <a href="">PROJETOS</a>
-            <a href="">SOBRE</a>
             <a href="">ARTIGOS</a>
+            <a href="">SOBRE</a>
             <a href="">CONTATO</a>
         </nav>
     </header>
@@ -81,10 +81,39 @@
             </div>
         </section>
         <section>
+            <div class="title_section">Artigos</div>
+            <div class="content_artigos" id="div-artigo">
+                <div class="artigo">
+                    <h2>Artigo 1</h2>
+                    <div>
+                        <img src="assets/images/jogodavelha.png" alt="Imagem do artigo">
+                        <div>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolores optio, quam quia praesentium est consequatur ab quas adipisci amet.                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolores optio, quam quia praesentium est consequatur ab quas adipisci amet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="artigo">
+                        <h2>Artigo 2</h2>
+                    <div>
+                        <img src="assets/images/jogodavelha.png" alt="Imagem do artigo">
+                        <div>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolores optio, quam quia praesentium est consequatur ab quas adipisci amet.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolores optio, quam quia praesentium est consequatur ab quas adipisci amet.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
             <div class="title_section about">Sobre mim</div>
             <div class="content_about_me">
-                <img src="assets/images/profile.jpg" alt="Foto de Daniel Meireles">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, modi fuga! Amet nihil dolorum laboriosam possimus, a quaerat omnis itaque quam harum soluta commodi quae, nulla consequatur cum ullam! Obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa repudiandae eligendi soluta recusandae excepturi iste tempora quaerat animi, dolor molestiae consectetur itaque rerum qui maiores voluptates dolores veniam facere? Optio, quae. Dolorem, delectus laborum. Incidunt aspernatur delectus voluptates reiciendis hic iure aliquam optio tenetur vel modi deleniti amet blanditiis fugit maxime, consectetur quo odit quis maiores perferendis consequuntur placeat fugiat corrupti inventore. Sapiente, vel ipsa obcaecati itaque aspernatur accusamus quidem cumque quasi velit vitae, sunt voluptas autem minus quas provident optio? Assumenda quae architecto eius necessitatibus beatae, minima asperiores sed fugiat aspernatur natus maxime, doloribus odit esse vero eos ducimus aliquid? Hic aspernatur dicta voluptatibus ex doloremque commodi libero magni qui nulla eius iure quas error a illum omnis excepturi tempora aliquam asperiores, repellendus esse pariatur aliquid reprehenderit recusandae sed. Laborum voluptas hic nulla libero, debitis cum alias dolores enim eos. Dignissimos ea aliquid ipsum quisquam dolore voluptate, rerum numquam accusamus, totam possimus consequatur itaque at a quasi fugit esse facilis non maxime nulla culpa eveniet veniam cupiditate laboriosam molestiae? Corrupti veniam enim quisquam delectus, eaque fuga eligendi nostrum esse vel pariatur harum dolor nobis dolores commodi? Ducimus soluta commodi modi quibusdam dolorum accusantium voluptatum voluptate earum provident minima.</p>
+                    <img src="assets/images/profile.jpg" alt="Foto de Daniel Meireles">
+                <div>
+                    <p>Ola, Meu nome é Daniel Meireles do Nascimento tenho 34 anos e sou formado em Analise e Desenvolvimento de Sistemas.</p>
+                    <p>Atualmentes estou estudando as Tecnologias React e PHP e meu desejo é trabalhar somente como desenvolvedor fullstack remotamente, a ideia desta pagina pessoal surgiu durante a quarentena provocada devido ao COVID-19, e estou estudando o dobro do tempo que ja estudava.</p>
+                    <p>Sei que a situação do mundo não é das melhores e o fato de ficar confinado a maior parte do tempo não é uma coisa que agrada a maioria das pessoas, mas porque não usar isso para aprender...</p>
+                    <p>Sou apaixonado por tecnologias, e sei que parece cliche nesta area, porem como esplicar o fato de sentir euforia ao ver uma novidade na area tecnologia?! Bom, é assim que me sinto, estou aprendendo constantemente e espero poder continuar assim.</p>
+                </div>
             </div>
         </section>
     </article>
