--- a/index.html
+++ b/index.html
@@ -109,10 +109,19 @@
             <div class="content_about_me">
                     <img src="assets/images/profile.jpg" alt="Foto de Daniel Meireles">
                 <div>
-                    <p>Ola, Meu nome é Daniel Meireles do Nascimento tenho 34 anos e sou formado em Analise e Desenvolvimento de Sistemas.</p>
-                    <p>Atualmentes estou estudando as Tecnologias React e PHP e meu desejo é trabalhar somente como desenvolvedor fullstack remotamente, a ideia desta pagina pessoal surgiu durante a quarentena provocada devido ao COVID-19, e estou estudando o dobro do tempo que ja estudava.</p>
-                    <p>Sei que a situação do mundo não é das melhores e o fato de ficar confinado a maior parte do tempo não é uma coisa que agrada a maioria das pessoas, mas porque não usar isso para aprender...</p>
-                    <p>Sou apaixonado por tecnologias, e sei que parece cliche nesta area, porem como esplicar o fato de sentir euforia ao ver uma novidade na area tecnologia?! Bom, é assim que me sinto, estou aprendendo constantemente e espero poder continuar assim.</p>
+                    <p>
+                        Ola, Meu nome é Daniel Meireles do Nascimento tenho 34 anos e sou formado em Analise e Desenvolvimento de Sistemas.
+                    </p>
+                    <p>
+                        AAtualmentes estou estudando as Tecnologias React e PHP e meu desejo é trabalhar somente como desenvolvedor fullstack remotamente, a ideia desta página pessoal surgiu durante a quarentena provocada devido ao COVID-19, e estou estudando o dobro do tempo que já estudava.
+                    </p>
+                    <p>
+                        Sei que a situação do mundo não é das melhores e o fato de ficar confinado a maior parte do tempo não é uma coisa que agrada a maioria das pessoas, mas porque não usar isso para aprender...
+
+                    </p>
+                    <p>
+                        Sou apaixonado por tecnologias, e sei que parece clichê nesta área, porém como explicar o fato de sentir euforia ao ver uma novidade na area tecnologia?! Bom, é assim que me sinto, estou aprendendo constantemente e espero poder continuar assim.
+                    </p>
                 </div>
             </div>
         </section>
