--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         Ola, Meu nome é Daniel Meireles do Nascimento tenho 34 anos e sou formado em Analise e Desenvolvimento de Sistemas.
                     </p>
                     <p>
-                        AAtualmentes estou estudando as Tecnologias React e PHP e meu desejo é trabalhar somente como desenvolvedor fullstack remotamente, a ideia desta página pessoal surgiu durante a quarentena provocada devido ao COVID-19, e estou estudando o dobro do tempo que já estudava.
+                        Atualmentes estou estudando as Tecnologias React e PHP e meu desejo é trabalhar somente como desenvolvedor fullstack remotamente, a ideia desta página pessoal surgiu durante a quarentena provocada devido ao COVID-19, e estou estudando o dobro do tempo que já estudava.
                     </p>
                     <p>
                         Sei que a situação do mundo não é das melhores e o fato de ficar confinado a maior parte do tempo não é uma coisa que agrada a maioria das pessoas, mas porque não usar isso para aprender...
