adicionando e dando ajuste nos links dos projetos.

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         <section>
             <div class="title_section">Projetos</div>
             <div class="content_projetos" id="div-projects">
-                <div class="projeto">
-                    <h2>Projeto 1</h2>
-                    <img src="assets/images/jogodavelha.png" alt="Imagem do projeto">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolores optio, quam quia praesentium est consequatur ab quas adipisci amet.</p>
+                <div class="projeto" onclick="redirect('devinhouse')">
+                    <h2>Projetos DevinHouse</h2>
+                    <img src="assets/images/devinhouse.png" alt="Logo dev in house">
+                    <p>Neste link vc encontra todas as atividades desenvolvidas no curso Dev in House.</p>
                 </div> 
-                <div class="projeto">
+                <div class="projeto" onclick="redirect('hcodelab')">
                     <h2>Projeto 2</h2>
-                    <img src="assets/images/jogodavelha.png" alt="Imagem do projeto">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia dolores optio, quam quia praesentium est consequatur ab quas adipisci amet.</p>
+                    <img src="assets/images/hcodelab.png" alt="Imagem do projeto">
+                    <p>Neste link você sera redirecionado para o projeto final do curso HcodeLab com NextJS e AdonisJS.</p>
                 </div>
                 <div class="projeto">
                     <h2>Projeto 3</h2>
