--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p>Neste link vc encontra todas as atividades desenvolvidas no curso Dev in House.</p>
                 </div> 
                 <div class="projeto" onclick="redirect('hcodelab')">
-                    <h2>Projeto 2</h2>
+                    <h2>Projeto HcodeLab</h2>
                     <img src="assets/images/hcodelab.png" alt="Imagem do projeto">
                     <p>Neste link você sera redirecionado para o projeto final do curso HcodeLab com NextJS e AdonisJS.</p>
                 </div>
