add favicon e excluindo imagens nao utilizadas

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- metas para mudar a cor do navegador mobile -->
     <meta name="theme-color" content="#e8523c">
     <meta name="apple-mobile-web-app-status-bar-style" content="#e8523c">
+    <link rel="shortcut icon" href="assets/images/BANNER.jpg" type="image/x-icon">
     <title>Daniel Meireles</title>
     <script src="https://kit.fontawesome.com/bbda1ce8ed.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
