Criado javascript para calcular a idade na section sobre

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <img src="assets/images/profile.jpg" alt="Foto de Daniel Meireles">
                 <div>
                     <p>
-                        Ola, Meu nome é Daniel Meireles do Nascimento tenho 34 anos e sou formado em Analise e Desenvolvimento de Sistemas.
+                        Ola, Meu nome é Daniel Meireles do Nascimento tenho <span class="anos"></span> anos e sou formado em Analise e Desenvolvimento de Sistemas.
                     </p>
                     <p>
                         Atualmentes estou estudando as Tecnologias React e PHP e meu desejo é trabalhar somente como desenvolvedor fullstack remotamente, a ideia desta página pessoal surgiu durante a quarentena provocada devido ao COVID-19, e estou estudando o dobro do tempo que já estudava.
