--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body class="dark">
     <header>
         <div class="logo">Daniel Meireles</div>
         <i class="fas fa-bars"  id="btn-open"></i>        
